# local-coding-agent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  start-chat.bat  start-web.bat
.github/workflows/: ci.yml
docs/: PROGRESS.md  SECURITY.md  architecture.md  claude-skills.md  conventions.md  data-model.md  demo.md  deployment.md  design.md  recipes.md  runbook-gpu.md  runbook-training-wsl2.md  security-checklist.md  trends.md  usage.md
docs/adr/: 0001-engine-llamacpp-via-lmstudio.md  0002-custom-react-loop.md  0003-verified-only-memory.md
evals/: user_domain_tasks.jsonl
references/: README.md
src/lca/: __init__.py  __main__.py  assembly.py  learning.py
src/lca/cli/: __init__.py  app.py  approval.py  clipboard.py  notify.py  render.py
src/lca/config/: __init__.py  paths.py  profiles.py  settings.py
src/lca/core/: __init__.py  agent.py  context.py  errors.py  events.py  messages.py  prompts.py  session.py
src/lca/engine_mgmt/: __init__.py  doctor.py
src/lca/evaluation/: __init__.py  harness.py  models.py  tasks.py
src/lca/mcp/: __init__.py  adapter.py  client.py  servers.py
src/lca/memory/: __init__.py  memory.py  models.py  store.py
src/lca/observability/: __init__.py  logging.py  metrics.py
src/lca/permissions/: __init__.py  approver.py  modes.py  policy.py  sandbox.py
src/lca/providers/: __init__.py  base.py  fake.py  grammar.py  llamacpp.py  openai_compat.py  registry.py  retry.py
src/lca/rag/: __init__.py  chunker.py  embedder.py  hybrid.py  indexer.py  reranker.py  retriever.py  store.py  watcher.py
src/lca/references/: __init__.py  catalog.jsonl  catalog.py
src/lca/routing/: __init__.py  consistency.py  difficulty.py  router.py
src/lca/skills/: __init__.py  loader.py
src/lca/tools/: __init__.py  base.py  browser.py  checkpoint.py  code_exec.py  delegate.py  fs_read.py  fs_write.py  plan.py  preview.py  reference.py  registry.py  run_checks.py  search_code.py  secret_scan.py  shell.py  skill.py  symbols.py  util.py
src/lca/tools/web/: __init__.py  (+2 more)
src/lca/verification/: __init__.py  adversary.py  consensus.py  gate.py  judges.py  models.py
src/lca/web/: __init__.py  approver.py  server.py
tests/: conftest.py  helpers.py
tests/integration/: test_agent_loop.py  test_agent_memory.py  test_agent_verification.py  test_best_of_n.py  test_execution.py  test_execution_grounded_verify.py  test_learning.py  test_mentions.py  test_metrics.py  test_web.py
tests/unit/: test_browser.py  test_checkpoint.py  test_cli_approver.py  test_clipboard.py  test_consistency.py  test_context.py  test_doctor.py  test_engine_detect.py  test_eval_and_metrics.py  test_fs_tools.py  test_grammar.py  test_mcp.py  test_memory.py  test_notify.py  test_permissions.py  test_plan.py  test_preview.py  test_prompts.py  test_rag.py  test_reference.py  test_registry.py  test_repo_map.py  test_reranker.py  test_retry_provider.py  test_routing.py  test_run_checks.py  test_secret_scan.py  test_security.py  test_skills.py  test_stream_assembler.py  test_symbols.py  test_verification.py  test_web_tools.py
training/: export_dataset.py  smoke_test.py  train_qlora.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+12 files in other folders)
