[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "lca — a 100% local, free, verification-grounded coding agent that runs on your own hardware"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codelab" }]
keywords = ["llm", "agent", "local", "coding-assistant", "llama.cpp", "rag", "mcp"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
]

# Feature extras are installed per-milestone so the base install stays light and offline-friendly.
[project.optional-dependencies]
rag = [
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
    "fastembed>=0.4.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
]
mcp = ["mcp>=1.2.0"]
search = ["ddgs>=9.0.0", "trafilatura>=1.12.0"]
agent = ["pydantic-ai>=0.0.14"]

[project.scripts]
lca = "lca.cli.app:main"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "import-linter>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lca"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# WSL2-only optional training scripts (heavy deps not installed in the base env).
extend-exclude = ["training"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF", "ASYNC"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = false
mypy_path = "src"
packages = ["lca"]

# Third-party libraries that ship no type stubs.
[[tool.mypy.overrides]]
module = [
    "sqlite_vec.*",
    "tree_sitter_language_pack.*",
    "fastembed.*",
    "trafilatura.*",
    "ddgs.*",
    "mcp.*",
    "watchdog.*",
]
ignore_missing_imports = true

# The watcher subclasses watchdog's (untyped) event handler when the optional
# dependency is present; allow subclassing Any only here.
[[tool.mypy.overrides]]
module = ["lca.rag.watcher"]
disallow_subclassing_any = false

# tree-sitter ships py.typed but its stubs vary across versions; treat as untyped
# so the AST chunker isn't coupled to a specific stub revision.
[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_language_pack"]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "live: requires a running llama-server (run explicitly with -m live)",
]
addopts = "-m 'not live'"

[tool.importlinter]
root_package = "lca"

# The single mechanism that makes "shared, UI-agnostic core" real instead of aspirational:
# nothing in the core/domain layers may import the CLI or Web UI packages.
[[tool.importlinter.contracts]]
name = "core and domain layers must not import the UI layers"
type = "forbidden"
source_modules = [
    "lca.core",
    "lca.assembly",
    "lca.evaluation",
    "lca.learning",
    "lca.providers",
    "lca.engine_mgmt",
    "lca.tools",
    "lca.rag",
    "lca.memory",
    "lca.verification",
    "lca.routing",
    "lca.mcp",
    "lca.permissions",
]
forbidden_modules = ["lca.cli", "lca.web"]
